--- a/main.html
+++ b/main.html
@@ -8,20 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<b>shoppingList</b>
-	<ol>
-		<li>car</li>
-		<li>house</li>
-		<li>Iphone</li>
-			
-	</ol>
-	<b>holidayList</b>
-	<ul>
-		<li>Manali </li>
-		<li>Haridar</li>
-		<li>jammu & kashmir</li>
-			
-	</ul>
+	<h1>My Wishlist</h1>
+  <h2>Shopping List:</h2>
+  <ol>
+    <li data-ns-test="shoppingList">New laptop</li>
+    <li data-ns-test="shoppingList">Designer watch</li>
+    <li data-ns-test="shoppingList">High-end camera</li>
+  </ol>
+  
+  <h2>Holiday Destinations:</h2>
+  <ul>
+    <li data-ns-test="holidayList">Maldives</li>
+    <li data-ns-test="holidayList">Bora Bora</li>
+    <li data-ns-test="holidayList">Santorini</li>
+  </ul>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
